# slack-channel-analysis

./: README.md  pyproject.toml  slack_channel_stats.ipynb
