[project]
name = "slack-channel-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "plotly>=5.0.0",
    "python-dotenv>=1.1.0",
    "seaborn>=0.11.0",
    "slack-sdk>=3.21.0",
    "wordcloud>=1.9.0",
]
